<resources>
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order_summary">Order summary</string>
    <string name="quantity">Quantity</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="thank_you">Thank you!</string>
</resources>
